--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         </style> 
     <title>Vite + React + TS</title>
   </head>
-  <body>
+  <body id="body">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
